src/test/deca/syntax/invalid/decaObjet/include/circular1.decah
#include "circular2.decah"